--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -5,8 +5,33 @@
 		padding: 4.5rem 0;
 	}
 
-	&__blue {
+	&--blue {
 		background: $mainBlue;
 		color: #fff;
+	}
+	
+	&--testimonials {
+		background: #e0e6ef;
+		
+		@mixin atLarge {
+			background: url('https://preview.c9users.io/matheussky/travel-agency-site/app/assets/images/testimonials-bg.jpg') top center no-repeat;
+			background-size: cover;
+		}
+	}
+	
+	&--no-b-padding-until-medium {
+		padding-bottom: 0;
+		
+		@mixin atMedium {
+			padding-bottom: 4.5rem;
+		}
+	}
+	
+	&--no-b-padding-until-large {
+		padding-bottom: 0;
+		
+		@mixin atLarge {
+			padding-bottom: 4.5rem;
+		}
 	}
 }
