--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,21 +1,41 @@
 .row {
 	@mixin clearfix;
-
+	
+	&--t-padding {
+		padding-top: 80px;
+	}
+	
 	&--gutters {
 		margin-right: -65px;
 	}
-
+	
+	&--gutters-large {
+		margin-right: -100px;
+	}
+	
+	&--gutters-small {
+		margin-right: -45px;
+	}
+	
 	&--gutters > div {
 		padding-right: 65px;
 	}
-
-	&--b-margin-until-medium {
+	
+	&--gutters-large > div {
+		padding-right: 100px;
+	}
+	
+	&--gutters-small > div {
+		padding-right: 45px;
+	}
+	
+	&__b-margin-until-medium {
 		margin-bottom: 1rem;
 	}
 	
 	@mixin atMedium {
 		&--b-margin-until-medium {
-			margin-bottom: 1rem;
+			margin-bottom: 0;
 		}
 
 		&__medium-4 {
@@ -26,6 +46,11 @@
 		&__medium-4--larger {
 			width: 37%;
 		}
+		
+	    &__medium-6 {
+	      float: left;
+	      width: 50%;
+	    }
 
 		&__medium-8 {
 			float: left;
@@ -34,6 +59,58 @@
 
 		&__medium-8--smaller {
 			width: 63%;
+		}
+	}
+	
+	@mixin atLarge {
+		&--b-margin-until-large {
+			margin-bottom: 0;
+		}
+
+		&__large-4 {
+			float: left;
+			width: 33.33%;
+		}
+
+		&__large-4--larger {
+			width: 37%;
+		}
+		
+	    &__large-6 {
+	      float: left;
+	      width: 50%;
+	    }
+
+		&__large-8 {
+			float: left;
+			width: 66.66%;
+		}
+
+		&__large-8--smaller {
+			width: 63%;
+		}
+	}
+	
+	/* Begin Equal Height Rule */
+	&--equal-height-at-medium {
+		@mixin atMedium {
+			display: flex;
+		}
+		
+		& > div {
+			float: none;
+			display: flex;
+		}
+	}
+	
+	&--equal-height-at-large {
+		@mixin atLarge {
+			display: flex;
+		}
+		
+		& > div {
+			float: none;
+			display: flex;
 		}
 	}
 }
