--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -14,7 +14,7 @@
 		background: #e0e6ef;
 		
 		@mixin atLarge {
-			background: url('https://preview.c9users.io/matheussky/travel-agency-site/app/assets/images/testimonials-bg.jpg') top center no-repeat;
+			background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
 			background-size: cover;
 		}
 	}
