--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -6,6 +6,10 @@ Instead edit gulp/templates/sprite */
 		.icon {
 			background-image: url('/assets/images/sprites/{{{sprite}}}');
 		}
+		
+		.no-svg .icon {
+			background-image: url('/assets/images/sprites/{{#replaceSvg2Png}}{{{sprite}}}{{/replaceSvg2Png}}');
+		}
 	{{/first}}
 	
 	.icon--{{base}} {
