--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -4,11 +4,11 @@ Instead edit gulp/templates/sprite */
 {{#shapes}}
 	{{#first}}
 		.icon {
-			background-image: url('/assets/images/sprites/{{{sprite}}}');
+			background-image: url('../../assets/images/sprites/{{{sprite}}}');
 		}
 		
 		.no-svg .icon {
-			background-image: url('/assets/images/sprites/{{#replaceSvg2Png}}{{{sprite}}}{{/replaceSvg2Png}}');
+			background-image: url('../../assets/images/sprites/{{#replaceSvg2Png}}{{{sprite}}}{{/replaceSvg2Png}}');
 		}
 	{{/first}}
 	
